[package]
name = "backend"
version = "0.1.0"
authors = ["Dhruv Gramopadhye <dgramopadhye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5.0", features = ["full"] }
sonic-channel = { version = "0.4" }
diesel = { version = "1.4.4", features = ["postgres","sqlite"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]

